# -

./: 211k10115_08.ipynb  README.md  pyproject.toml
01/: Financial.ipynb
01/data/: AAPL_close.csv
02/: 211k10115_02.ipynb  stock.ipynb
02/data/: AAPL.csv
03/: 03.ipynb  Apple_stock.ipynb
04/: 04.ipynb  04_2.ipynb  stack_data.ipynb
04/data/: DJ30.tsv  DJ30_Close.tsv  DJ30_OtoC.tsv  DJ31.tsv  djia.csv  djia_close.csv
04/data/.ipynb_checkpoints/: 04_ans-Copy1-checkpoint.ipynb
05/: 211k10115_05.ipynb  stack_data2.ipynb
05/data/: DJ30_Close.tsv  DJ30_OtoC.tsv  DJI_data.tsv
06/: 06.ipynb  06_211k10194.ipynb  jaked97LLM.ipynb  news_data.ipynb
07/: 07.ipynb  newsdata.ipynb
07/data/: result.tsv
08/: newsdata_textminning.ipynb
09/: 09.ipynb  cryptoassets.ipynb
10/: 10.ipynb
10/data/: genes.tsv
11/: 11.ipynb
12/: 12.ipynb  211K10115_12.ipynb
13/: 13.ipynb
14/: 14.ipynb
14/data/: genes.tsv
